need to fix content jumping

--- a/main.css
+++ b/main.css
@@ -88,7 +88,7 @@ body {
     font-size: 1.3rem;
     line-height: 1.5;
     padding-bottom: 0;
-    margin-bottom: 1px; 
+    /* margin-bottom: 1px;  */
   }
 
   /*social button links*/
